crash when trying to convert from curve to mesh #56619

Closed
opened 2018-08-30 15:47:13 +02:00 by yves bodson · 7 comments

system-info.txt

{F4459958}System Information
Operating system and graphics card
Linux Ubuntu 18.04
Nvidia 1060

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
I am testing deforming an object by using a curve. When parenting the object to the curve Blender 2.8 crashes.
New try with transforming the curve in a mesh for increasing vertices count and then converting back mesh to curve. When trying to parent object, blender 2.8 crashes
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
create a curve with 25 segments, create an object using a cylinder and an array of 75 cylinders merged into one object.. convert the curve to mesh for increase vertices, then back to curve. Parent object to curve with curve deform.. Crash..

[system-info.txt](https://archive.blender.org/developer/F4459930/system-info.txt) {[F4459958](https://archive.blender.org/developer/F4459958/Stone_Knot_Glow_Ultraviolet__05.blend)}**System Information** Operating system and graphics card Linux Ubuntu 18.04 Nvidia 1060 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** I am testing deforming an object by using a curve. When parenting the object to the curve Blender 2.8 crashes. New try with transforming the curve in a mesh for increasing vertices count and then converting back mesh to curve. When trying to parent object, blender 2.8 crashes **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps create a curve with 25 segments, create an object using a cylinder and an array of 75 cylinders merged into one object.. convert the curve to mesh for increase vertices, then back to curve. Parent object to curve with curve deform.. Crash..
Author

Added subscriber: @YvesBodson

Added subscriber: @YvesBodson
Author

I just run again the project using the command line with -d > debug file that I join to the present report..
Bldn28-debugsession.txt

I just run again the project using the command line with -d > debug file that I join to the present report.. [Bldn28-debugsession.txt](https://archive.blender.org/developer/F4460100/Bldn28-debugsession.txt)
Author

Here is the crash report from Blender 28.. Stone Knot Glow Ultraviolet _05.crash.txt

Here is the crash report from Blender 28.. [Stone Knot Glow Ultraviolet _05.crash.txt](https://archive.blender.org/developer/F4460199/Stone_Knot_Glow_Ultraviolet__05.crash.txt)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note, the issue is transforming once parent curve-deform has been setup.

Note, the issue is transforming once parent curve-deform has been setup.

This issue was referenced by e3c110e72e

This issue was referenced by e3c110e72e9d7a893d1681eeb84287032fc53d17

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56619
No description provided.