Fix T56619: Transform crash w/ curve deform